# wsnlab

./: .gitignore  tarball-src.sh  tarball.sh
platypus/: .gitignore
platypus/firmware/: CMakeLists.txt  Crosscompile  GrLib.txt  Makefile  config.cfg  init_mcu_spi.sh  install.sh  platypus-test.service  platypus-test.sh  platypus.conf  platypus.service  syslog.service  syslog.sh  test.sh
platypus/firmware/GrLib/grlib/: button.c  button.h  checkbox.c  checkbox.h  context.c  grlib.h  imageButton.c  imageButton.h  radioButton.c  radioButton.h  rectangle.c  string.c
platypus/firmware/LcdDriver/: HAL_MSP_EXP430FR5969_Sharp96x96.c  HAL_MSP_EXP430FR5969_Sharp96x96.h  LcdDriver.c  LcdDriver.h  Sharp128x128.c  Sharp128x128.h  Sharp96x96.c  Sharp96x96.h
platypus/firmware/experimental/: SharpLCDNet.cpp
platypus/firmware/include/: GrLib.hpp  SharpLCD.hpp  batgauge_edison.h  display_edison.h  imu_edison.h  ldc_edison.h  mcu_edison.h  platypus.h
platypus/firmware/mcu/: README
platypus/firmware/mcu/GrLib/grlib/: grlib.h  line.c
platypus/firmware/mcu/LcdDriver/: LcdDriver.c  LcdDriver.h  Sharp128x128.c  Sharp128x128.h  Sharp96x96.c  Sharp96x96.h
platypus/firmware/mcu/include/: batgauge_mcu.h  display_mcu.h  imu_mcu.h  ldc_mcu.h
platypus/firmware/mcu/src/: batgauge_mcu.c  display_mcu.c  imu_mcu.c  ldc_mcu.c  platypusMcuMain.c
platypus/firmware/src/: SharpLCD.cpp  batgaugeTestMain.cpp  batgauge_edison.cpp  display_edison.cpp  graphTest.cpp  imu_edison.cpp  lcdTest.cpp  ldc_edison.cpp  mcu_edison.cpp  platypus.cpp  platypusMain.cpp  platypusTest.cpp  ppsTestMain.cpp
platypus/firmware/tst/: SHARPdisplay.h  build.sh  dsptest.c  imutest.c  lcd_test.cpp  log_data_task.sh
platypus/hardware/Platypus_v1_0_Proto_v2_0/: Platypus_v1_0_Proto_v2_0.sch
platypus/hardware/Platypus_v1_0_Proto_v3_0/: Platypus_v1_0_Proto_v3_0.sch
platypus/hardware/Platypus_v1_0_Proto_v4_0/: Platypus_v1_0_Proto_v4_0.sch
platypus/hardware/case_design/v5_0/BOTTOM(Solid)/: Platypus_Bottom_Case.stl
platypus/hardware/case_design/v6_0/contact_pcb/: contact_pcb.brd
platypus/hardware/case_design/v7_0/BOTTOM(Solid)/: Platypus_Bottom_Case_v7_0.skp  Platypus_Bottom_Case_v7_0.stl
platypus/hardware/case_design/v8_0/BOTTOM(Solid)/: Platypus_Bottom_Case_v8_0.skp  Platypus_Bottom_Case_v8_0.stl
platypus/hardware/charger/v1_0/charger_pcb/: charger_pcb.brd  charger_pcb.sch
platypus/hardware/charger/v2_0/charger_case/: charger_case_bottom.stl  charger_case_bottom.stp  charger_case_complete.fcstd  charger_case_complete.stl  charger_case_complete.stp  charger_case_top.stl  charger_case_top.stp
platypus/hardware/charger/v2_0/charger_pcb/: Cradle.cxml  charger_pcb.brd  charger_pcb.cmp  charger_pcb.crc  charger_pcb.cxml  charger_pcb.drd  charger_pcb.dri  charger_pcb.gpi  charger_pcb.mnt  charger_pcb.tmp
platypus/hardware/eagle/: BQ51050B.brd  BQ51050B.sch  Platypus Change Log.txt  Platypus.csv  Platypus_FPC.brd  Platypus_FPC.sch  Platypus_v1_0_Proto_v16_0.brd  Platypus_v1_0_Proto_v16_0.sch
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v10_0/: Platypus_v1_0_Proto_v10_0.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v11_0/: Platypus Change Log.txt  Platypus.brd  Platypus.sch
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v12_0/: Platypus Change Log.txt  Platypus.brd  Platypus.sch  Platypus_v1_0_Proto_v12_0.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v13_0/: Platypus Change Log.txt  Platypus_v1_0_Proto_v13_0.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v14_0/: Platypus Change Log.txt  Platypus_v1_0_Proto_v14_0.brd  Platypus_v1_0_Proto_v14_0.sch
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v15_0/: Platypus Change Log.txt  Platypus_v1_0_Proto_v15_0.brd  Platypus_v1_0_Proto_v15_0.sch
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v16_0/: Platypus Change Log.txt  Platypus_v1_0_Proto_v16_0.brd  Platypus_v1_0_Proto_v16_0.sch
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v1_1/: Platypus_v1_0_Proto_v1_1.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v3_0/: Platypus_v1_0_Proto_v3_0.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v4_0/: Platypus_v1_0_Proto_v4_0.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v5_0/: Platypus_v1_0_Proto_v5_0.sch
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v6_0/: Platypus_v1_0_Proto_v6_0.brd
platypus/hardware/eagle/Old versions/Platypus_v1_0_Proto_v8_0/: Platypus_v1_0_Proto_v8_0.brd  Platypus_v1_0_Proto_v8_0.sch
platypus/hardware/eagle/Platypus_v_2/: Platypus Change Log.txt  Platypus_v2_0_Proto_v1_0.brd  Platypus_v2_0_Proto_v1_0.csv  Platypus_v2_0_Proto_v1_0.sch
platypus/hardware/eagle/User Lib/: Platy_Bat_Pad.lbr  TSL2584TSV.lbr
platypus/software/: convert_PPS.py  download_PPS.py  viz_PPS.py  viz_PPS3.py
platypus/software/pps_io/: pps_import.py
platypus/software/pps_plot/: pps_plot.py  pps_plot3.py
teams_1516/jaoabasakazv/: DisplayMain.cpp  README.md  SensorNodeMain.cpp  centralNode.c  localizationList.c  localizationList.h  udpClient6.c  udpClient6.h
teams_1516/risiköwast/: README.md
teams_1516/risiköwast/Contiki_TCP_Server_Client/: Init_script_client.txt  Init_script_server.txt  Makefile  tcp-client.c  tcp-server.c
teams_1516/risiköwast/IPv6_TCP_Server_Client/: client.c  makefile  server.c  socketlayer.c  socketprx.h
teams_1516/risiköwast/platypus/: LICENSE
teams_1516/risiköwast/platypus/firmware/: Makefile  install.sh  platypus.conf
teams_1516/risiköwast/platypus/firmware/LcdDriver/: LcdDriver.c  LcdDriver.h  Sharp128x128.c
teams_1516/risiköwast/platypus/software/: convert_PPS.py  download_PPS_GUI.py  viz_PPS.py
teams_1516/wedisckrsc/: README.md  client-routes.py  imconv.py  master-routes.sh
(+78 files in other folders)
